--- a/_modules/index.html
+++ b/_modules/index.html
@@ -39,6 +39,7 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="copyxnat/api/run_command.html">copyxnat.api.run_command</a></li>
 <li><a href="copyxnat/commands/check_datatypes_command.html">copyxnat.commands.check_datatypes_command</a></li>
+<li><a href="copyxnat/commands/compare_command.html">copyxnat.commands.compare_command</a></li>
 <li><a href="copyxnat/commands/copy_command.html">copyxnat.commands.copy_command</a></li>
 <li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
 <li><a href="copyxnat/commands/find_commands.html">copyxnat.commands.find_commands</a></li>
