--- a/genindex.html
+++ b/genindex.html
@@ -94,6 +94,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.CACHE_TYPE">CACHE_TYPE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.CACHE_TYPE">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.CACHE_TYPE">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.CACHE_TYPE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -120,6 +122,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.COMMAND_LINE">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.COMMAND_LINE">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.COMMAND_LINE">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -134,6 +138,8 @@
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">CommandInputs (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.commands">commands() (in module copyxnat.commands.find_commands)</a>
+</li>
+      <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand">CompareCommand (class in copyxnat.commands.compare_command)</a>
 </li>
       <li><a href="copyxnat.pyreporter.progress.html#copyxnat.pyreporter.progress.Progress.complete_progress">complete_progress() (copyxnat.pyreporter.progress.Progress method)</a>
 
@@ -182,6 +188,13 @@
 
       <ul>
         <li><a href="copyxnat.commands.check_datatypes_command.html#module-copyxnat.commands.check_datatypes_command">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.commands.compare_command
+
+      <ul>
+        <li><a href="copyxnat.commands.compare_command.html#module-copyxnat.commands.compare_command">module</a>
 </li>
       </ul></li>
       <li>
@@ -268,6 +281,8 @@
         <li><a href="copyxnat.pyreporter.console_logger.html#module-copyxnat.pyreporter.console_logger">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.file_logger
 
@@ -275,8 +290,6 @@
         <li><a href="copyxnat.pyreporter.file_logger.html#module-copyxnat.pyreporter.file_logger">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.progress
 
@@ -680,6 +693,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.HELP">HELP (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.HELP">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.HELP">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.HELP">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -782,6 +797,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.MODIFY_DST_SERVER">MODIFY_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.MODIFY_DST_SERVER">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.MODIFY_DST_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.MODIFY_DST_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -796,6 +813,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.MODIFY_SRC_SERVER">MODIFY_SRC_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.MODIFY_SRC_SERVER">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.MODIFY_SRC_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.MODIFY_SRC_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -820,6 +839,8 @@
         <li><a href="copyxnat.commands.html#module-copyxnat.commands">copyxnat.commands</a>
 </li>
         <li><a href="copyxnat.commands.check_datatypes_command.html#module-copyxnat.commands.check_datatypes_command">copyxnat.commands.check_datatypes_command</a>
+</li>
+        <li><a href="copyxnat.commands.compare_command.html#module-copyxnat.commands.compare_command">copyxnat.commands.compare_command</a>
 </li>
         <li><a href="copyxnat.commands.copy_command.html#module-copyxnat.commands.copy_command">copyxnat.commands.copy_command</a>
 </li>
@@ -895,6 +916,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.NAME">NAME (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.NAME">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.NAME">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.NAME">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -977,6 +1000,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.print_results">print_results() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.print_results">(copyxnat.commands.compare_command.CompareCommand method)</a>
+</li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.print_results">(copyxnat.commands.show_command.ShowCommand method)</a>
 </li>
         <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">(copyxnat.xnat.commands.Command method)</a>
@@ -1170,6 +1195,8 @@
       </ul></li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.api.run_command)</a>
 </li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_next">run_next() (copyxnat.xnat.commands.Command method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1237,6 +1264,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.USE_DST_SERVER">USE_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.USE_DST_SERVER">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.USE_DST_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.USE_DST_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -1265,6 +1294,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.VERB">VERB (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.compare_command.html#copyxnat.commands.compare_command.CompareCommand.VERB">(copyxnat.commands.compare_command.CompareCommand attribute)</a>
+</li>
         <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.VERB">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.VERB">(copyxnat.commands.export_command.ExportCommand attribute)</a>
@@ -1278,10 +1309,10 @@
       </ul></li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_pip">version_from_pip() (in module copyxnat.utils.versioning)</a>
 </li>
-      <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
+</li>
       <li>
     versioneer
 
