--- a/_modules/copyxnat/commands/find_commands.html
+++ b/_modules/copyxnat/commands/find_commands.html
@@ -42,6 +42,7 @@
 
 <span class="sd">&quot;&quot;&quot;Commands defining actions that can be performed with copyxnat&quot;&quot;&quot;</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.check_datatypes_command</span> <span class="kn">import</span> <span class="n">CheckDatatypesCommand</span>
+<span class="kn">from</span> <span class="nn">copyxnat.commands.compare_command</span> <span class="kn">import</span> <span class="n">CompareCommand</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.copy_command</span> <span class="kn">import</span> <span class="n">CopyCommand</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.export_command</span> <span class="kn">import</span> <span class="n">ExportCommand</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands.show_command</span> <span class="kn">import</span> <span class="n">ShowCommand</span>
@@ -64,7 +65,8 @@
             <span class="n">CopyCommand</span><span class="p">,</span>
             <span class="n">CheckDatatypesCommand</span><span class="p">,</span>
             <span class="n">OhifCommand</span><span class="p">,</span>
-            <span class="n">RebuildCatalogCommand</span>
+            <span class="n">RebuildCatalogCommand</span><span class="p">,</span>
+            <span class="n">CompareCommand</span>
             <span class="p">]</span></div>
 </pre></div>
 
