--- a/copyxnat.commands.check_datatypes_command.html
+++ b/copyxnat.commands.check_datatypes_command.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="copyxnat.commands.copy_command module" href="copyxnat.commands.copy_command.html" />
+    <link rel="next" title="copyxnat.commands.compare_command module" href="copyxnat.commands.compare_command.html" />
     <link rel="prev" title="copyxnat.commands package" href="copyxnat.commands.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
@@ -29,7 +29,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.copy_command.html" title="copyxnat.commands.copy_command module"
+          <a href="copyxnat.commands.compare_command.html" title="copyxnat.commands.compare_command module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="copyxnat.commands.html" title="copyxnat.commands package"
@@ -126,8 +126,8 @@ scan datatypes that are present on the source server</p>
   <p class="topless"><a href="copyxnat.commands.html"
                         title="previous chapter">copyxnat.commands package</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="copyxnat.commands.copy_command.html"
-                        title="next chapter">copyxnat.commands.copy_command module</a></p>
+  <p class="topless"><a href="copyxnat.commands.compare_command.html"
+                        title="next chapter">copyxnat.commands.compare_command module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -159,7 +159,7 @@ scan datatypes that are present on the source server</p>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.commands.copy_command.html" title="copyxnat.commands.copy_command module"
+          <a href="copyxnat.commands.compare_command.html" title="copyxnat.commands.compare_command module"
              >next</a> |</li>
         <li class="right" >
           <a href="copyxnat.commands.html" title="copyxnat.commands package"
