--- a/genindex.html
+++ b/genindex.html
@@ -1309,8 +1309,6 @@
       </ul></li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_pip">version_from_pip() (in module copyxnat.utils.versioning)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
 </li>
       <li>
@@ -1328,6 +1326,8 @@
         <li><a href="versioneer.html#versioneer.VersioneerConfig">(class in versioneer)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.versions_from_file">versions_from_file() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.versions_from_parentdir">versions_from_parentdir() (in module copyxnat.utils.versioneer_version)</a>
@@ -1336,6 +1336,32 @@
         <li><a href="versioneer.html#versioneer.versions_from_parentdir">(in module versioneer)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.visible_name">visible_name (copyxnat.xnat.xnat_interface.XnatAssessor attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.visible_name">(copyxnat.xnat.xnat_interface.XnatExperiment attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.visible_name">(copyxnat.xnat.xnat_interface.XnatFile attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource.visible_name">(copyxnat.xnat.xnat_interface.XnatInResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatOutResource.visible_name">(copyxnat.xnat.xnat_interface.XnatOutResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.visible_name">(copyxnat.xnat.xnat_interface.XnatProject attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatReconstruction.visible_name">(copyxnat.xnat.xnat_interface.XnatReconstruction attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatResource.visible_name">(copyxnat.xnat.xnat_interface.XnatResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatScan.visible_name">(copyxnat.xnat.xnat_interface.XnatScan attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.visible_name">(copyxnat.xnat.xnat_interface.XnatServer attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject.visible_name">(copyxnat.xnat.xnat_interface.XnatSubject attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.visible_name">visible_name() (copyxnat.xnat.xnat_interface.XnatBase property)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -1376,6 +1402,34 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.XNAT_PROJECT_NAME_TAG">XNAT_PROJECT_NAME_TAG (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor.xnat_type">xnat_type (copyxnat.xnat.xnat_interface.XnatAssessor attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.xnat_type">(copyxnat.xnat.xnat_interface.XnatExperiment attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.xnat_type">(copyxnat.xnat.xnat_interface.XnatFile attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource.xnat_type">(copyxnat.xnat.xnat_interface.XnatInResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatOutResource.xnat_type">(copyxnat.xnat.xnat_interface.XnatOutResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.xnat_type">(copyxnat.xnat.xnat_interface.XnatProject attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatReconstruction.xnat_type">(copyxnat.xnat.xnat_interface.XnatReconstruction attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatResource.xnat_type">(copyxnat.xnat.xnat_interface.XnatResource attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatScan.xnat_type">(copyxnat.xnat.xnat_interface.XnatScan attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.xnat_type">(copyxnat.xnat.xnat_interface.XnatServer attribute)</a>
+</li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatSubject.xnat_type">(copyxnat.xnat.xnat_interface.XnatSubject attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.xnat_type">xnat_type() (copyxnat.xnat.xnat_interface.XnatBase property)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatAssessor">XnatAssessor (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase">XnatBase (class in copyxnat.xnat.xnat_interface)</a>
@@ -1386,8 +1440,6 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem">XnatFileContainerItem (class in copyxnat.xnat.xnat_interface)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource">XnatInResource (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem">XnatItem (class in copyxnat.xnat.xnat_interface)</a>
