--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -142,7 +142,7 @@
                 <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">xnat_item</span><span class="p">,</span> <span class="p">(</span><span class="n">XnatProject</span><span class="p">,</span> <span class="n">XnatSubject</span><span class="p">)):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">info</span><span class="p">(</span>
                 <span class="s2">&quot;Skipping existing </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2"> and all of its child items&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
-                    <span class="n">xnat_item</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>  <span class="c1"># pylint: disable=no-member, protected-access</span>
+                    <span class="n">xnat_item</span><span class="o">.</span><span class="n">visible_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>
             <span class="k">return</span> <span class="kc">False</span>
 
         <span class="c1"># Do not overwrite unless overwrite flag is set</span>
@@ -152,12 +152,12 @@
                 <span class="s2">&quot;server. Existing data will not be &quot;</span>
                 <span class="s2">&quot;modified. Use the --overwrite_existing &quot;</span>
                 <span class="s2">&quot;option to allow updating of existing &quot;</span>
-                <span class="s2">&quot;data&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>  <span class="c1"># pylint: disable=no-member, protected-access</span>
+                <span class="s2">&quot;data&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">visible_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>
             <span class="k">return</span> <span class="kc">False</span>
 
         <span class="c1"># Overwrite</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">info</span><span class="p">(</span>
-            <span class="s2">&quot;Updating existing </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>  <span class="c1"># pylint: disable=no-member, protected-access</span>
+            <span class="s2">&quot;Updating existing </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">visible_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>
         <span class="k">return</span> <span class="kc">True</span>
 
     <span class="k">def</span> <span class="nf">_should_recurse</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">already_exists</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
@@ -169,8 +169,8 @@
         <span class="k">if</span> <span class="n">already_exists</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">skip_existing</span> <span class="ow">and</span> \
                 <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">xnat_item</span><span class="p">,</span> <span class="p">(</span><span class="n">XnatProject</span><span class="p">,</span> <span class="n">XnatSubject</span><span class="p">)):</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">log</span><span class="p">(</span>
-                <span class="s2">&quot;Skipping children of existing </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2"> becaue of skip-existing &quot;</span>
-                <span class="s2">&quot;flag&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>  <span class="c1"># pylint: disable=no-member, protected-access</span>
+                <span class="s2">&quot;Skipping children of existing </span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2"> because of skip-existing &quot;</span>
+                <span class="s2">&quot;flag&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">visible_name</span><span class="p">,</span> <span class="n">label</span><span class="p">))</span>
             <span class="k">return</span> <span class="kc">False</span>
 
         <span class="k">return</span> <span class="kc">True</span>
@@ -183,7 +183,8 @@
             <span class="n">missing_session_type</span> <span class="o">=</span> <span class="n">datatype</span> <span class="ow">not</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">dst_datatypes</span>
 
             <span class="k">if</span> <span class="n">missing_session_type</span><span class="p">:</span>
-                <span class="n">item_id</span> <span class="o">=</span> <span class="s1">&#39;</span><span class="si">{}</span><span class="s1"> </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">_name</span><span class="p">,</span> <span class="n">xnat_item</span><span class="o">.</span><span class="n">full_name</span><span class="p">)</span>  <span class="c1"># pylint: disable=protected-access</span>
+                <span class="n">item_id</span> <span class="o">=</span> <span class="s1">&#39;</span><span class="si">{}</span><span class="s1"> </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">visible_name</span><span class="p">,</span>
+                                         <span class="n">xnat_item</span><span class="o">.</span><span class="n">full_name</span><span class="p">)</span>
 
                 <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">ignore_datatype_errors</span><span class="p">:</span>
                     <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
